test/error/MethodPrivateOverride.fu
abstract class Base
{
	internal abstract void Foo();
}

class Derived : Base
{
	override void Foo() //ERROR: Private method cannot be override
	{
	}
}
